--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,3 +1,6 @@
+execute:
+  freeze: auto
+
 project:
   type: website
 
@@ -15,29 +18,29 @@ website:
       #- section: Index (2024-3)
       #  href: index.qmd
       - section: Indroduction
-        #href: ./chapters/chapter01.qmd
+        #href: chapter01.qmd
         contents: 
-        - ./chapters/chapter01.qmd
+        - chapter01.qmd
       - section: Chapter 2
-        href: ./chapters/chapter02.qmd
+        href: chapter02.qmd
         contents: 
-        - ./chapters/chapter02.qmd
+        - chapter02.qmd
       - section: Chapter 3
-        href: ./chapters/chapter03.qmd
+        href: chapter03.qmd
         contents: 
-        - ./chapters/chapter03.qmd
+        - chapter03.qmd
       - section: Chapter 4
-        href: ./chapters/chapter04.qmd
+        href: chapter04.qmd
         contents: 
-        - ./chapters/chapter04.qmd
+        - chapter04.qmd
       - section: Chapter 5
-        href: ./chapters/chapter05.qmd
+        href: chapter05.qmd
         contents: 
-        - ./chapters/chapter05.qmd
+        - chapter05.qmd
       - section: Chapter 6
-        href: ./chapters/chapter06.qmd
+        href: chapter06.qmd
         contents: 
-        - ./chapters/chapter06.qmd
+        - chapter06.qmd
       - section: about
         href: about.qmd
         contents: 
