changed _quarto.yml, added chapter 4 to 6

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -36,18 +36,18 @@ website:
         href: chapter03.qmd
         contents: 
         - chapter03.qmd
-      #- section: Chapter 4
-      #  href: chapter04.qmd
-      #  contents: 
-      #  - chapter04.qmd
-      #- section: Chapter 5
-      #  href: chapter05.qmd
-      #  contents: 
-      #  - chapter05.qmd
-      #- section: Chapter 6
-      #  href: chapter06.qmd
-      #  contents: 
-      #  - chapter06.qmd
+      - section: Chapter 4
+        href: chapter04.qmd
+        contents: 
+        - chapter04.qmd
+      - section: Chapter 5
+        href: chapter05.qmd
+        contents: 
+        - chapter05.qmd
+      - section: Chapter 6
+        href: chapter06.qmd
+        contents: 
+        - chapter06.qmd
       - section: about
         href: about.qmd
         contents: 
