--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,67 +1,59 @@
 execute:
-    freeze: auto
+  freeze: auto
 
 project:
   type: website
-  output-dir: _site
+  output-dir: docs
   #author: "Thomas M. Rudolf"
 
 website:
-  title: "HOME" #"Automatation and Industrial Robots"
+  title: "HOME" # "Automatation and Industrial Robots"
   
   navbar:
     left:
       - href: index.qmd
+        text: Home
+  
   sidebar:
-    style: 'docked'
+    style: docked
     search: true
     contents:
       - section: Index (2024-3)
-        href: index.qmd
         contents: 
-        -  index.qmd
+          - index.qmd
       - section: About the lecture
-        href: chapter00.qmd
         contents: 
-        - chapter00.qmd
+          - chapter00.qmd
       - section: Chapter 1
-        href: chapter01.qmd
         contents: 
-        - chapter01.qmd
+          - chapter01.qmd
       - section: Chapter 2
-        href: chapter02.qmd
         contents: 
-        - chapter02.qmd
+          - chapter02.qmd
+          - exc_chapter02.qmd
       - section: Chapter 3
-        href: chapter03.qmd
         contents: 
-        - chapter03.qmd
+          - chapter03.qmd
+          - exc_chapter03.qmd
       - section: Chapter 4
-        href: chapter04.qmd
         contents: 
-        - chapter04.qmd
+          - chapter04.qmd
       - section: Chapter 5
-        href: chapter05.qmd
         contents: 
-        - chapter05.qmd
+          - chapter05.qmd
       - section: Chapter 6
-        href: chapter06.qmd
         contents: 
-        - chapter06.qmd
-      - section: about
-        href: about.qmd
+          - chapter06.qmd
+      - section: About
         contents: 
-        - about.qmd
+          - about.qmd
       
 format:
   html:
     theme: default
-    #output-file: index.html
     css: style.css
     toc: false
     toc-location: left
     toc-depth: 3
 
-
 editor: visual
-
