--- a/_quarto.yml
+++ b/_quarto.yml
@@ -34,7 +34,7 @@ website:
       - section: Chapter 3
         contents: 
           - chapter03.qmd
-          - exc_chapter03.qmd
+          - chapter03.qmd #exc_chapter03.qmd
       - section: Chapter 4
         contents: 
           - chapter04.qmd
