--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,13 +10,17 @@ book:
   chapters:
     - index.qmd
     - chapter00.qmd
-    - chapter01.qmd
-    - chapter02.qmd 
-    - chapter03.qmd
-    - chapter04.qmd
-    - chapter05.qmd
-    - chapter06.qmd      
-
+    part "Chapters"
+      chapters: 
+        - chapter01.qmd
+        - chapter02.qmd 
+        - chapter03.qmd
+        - chapter04.qmd
+        - chapter05.qmd
+        - chapter06.qmd      
+    part: "About"
+      chapters:
+        - about.qmd
 website:
   title: "HOME" # "Automatation and Industrial Robots"
   #author: "Thomas M. Rudolf"
