trying to change numbering in about and sidebar

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,6 +5,9 @@ project:
   type: book
   output-dir: docs
 book:
+  numbered: true
+  sidebar: 
+    numbered: false
   title: "Automatation and Industrial Robots" 
   author: "Thomas M. Rudolf"
   chapters:
