added numbered:: chapter01 starts with 1

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,7 @@ book:
     - part: "Chapters"
       chapters: 
         - chapter01.qmd
+            number-offset: 1   # explicitly start numbering here
         - chapter02.qmd 
         - chapter03.qmd
         - chapter04.qmd
